--- a/src/components/triplist.css
+++ b/src/components/triplist.css
@@ -16,3 +16,12 @@
     border-radius: 4px;
     margin: 20px 0;
 }
+.trip-list .filters{
+    display: flex;
+    gap:10px;
+}
+.trip-list button{
+    padding:10px;
+    flex-grow: 1;
+    font-size: 16px;
+}
